--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,15 @@
+@charset "UTF-8";
 body {
   font-family: 'Open Sans', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
+
+.titulo {
+  text-align: center; }
+
+.texto {
+  text-align: center; }
+
+.botão {
+  align-items: center; }
