--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,16 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
+
+.orcamento {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #121A47;
+  color: #ffffff; }
+
+.form {
+  border-radius: 5%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px; }
