--- a/assets/scss/arquivos/_variaveis.scss
+++ b/assets/scss/arquivos/_variaveis.scss
@@ -16,3 +16,13 @@ $font-size-subtitulo: 32px;
 $font-size-descricao: 24px;
 $font-size-texto: 16px;
 
+
+// botão
+$border: solid 1px;
+$altura: 4.81vh;
+$border-radius: 4px;
+
+
+
+
+
