--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,41 @@ body {
   margin: 0;
   box-sizing: border-box; }
 
+.container {
+  width: 75vw;
+  margin: 0 auto; }
+
 .sobre {
   display: flex;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: space-around; }
   .sobre .titulo {
-    color: #C90328; }
+    color: #C90328;
+    font-size: 16px;
+    margin-top: 50px; }
   .sobre .subtitulo {
     color: #121A47;
-    font-weight: bold; }
+    font-weight: bold;
+    font-size: 32px; }
   .sobre .texto {
-    color: #707070; }
+    color: #707070;
+    font-size: 16px; }
+  .sobre .img {
+    width: 44vw;
+    padding-right: 2vw; }
+  .sobre .input {
+    width: 100%;
+    height: 4.81vh;
+    margin: 5px;
+    border-radius: 4px;
+    border: solid 1px #707070; }
+  .sobre .btn {
+    width: 55%;
+    margin-left: 46%;
+    border-radius: 4px;
+    height: 4.81vh;
+    text-align: center;
+    margin-top: 5%;
+    border: solid 1px #707070;
+    background-color: #C90328;
+    color: #ffffff; }
