servicos primeiro commit

--- a/assets/scss/arquivos/_variaveis.scss
+++ b/assets/scss/arquivos/_variaveis.scss
@@ -1,8 +1,9 @@
 // cor
 $branco: #ffffff;
-$azul: #121A47;
-$vermelho: #C90328;
+$azul: #121a47;
+$vermelho: #c90328;
 $cinza: #707070;
+$cinza-claro: #fafafa;
 
 $cor-primaria: $branco;
 $cor-secundaria: $azul;
@@ -15,4 +16,3 @@ $font-size-titulo: 40px;
 $font-size-subtitulo: 32px;
 $font-size-descricao: 24px;
 $font-size-texto: 16px;
-
