--- a/assets/scss/arquivos/_servicos.scss
+++ b/assets/scss/arquivos/_servicos.scss
@@ -22,13 +22,14 @@
   }
 
   .servicos__divcartoes {
-    @include flex(top, center);
+    @include flex(flex-start, space-around);
+
   }
 
   .servicos__cartao {
     @include descricao;
-    width: 16vw;
-    margin: 30px;
+
+
   }
 
   .servicos__titulo__cartao {
@@ -51,10 +52,4 @@
     height: 74.8px;
   }
 
-  .servicos__curva {
-    width: 0;
-    height: 0;
-    border-bottom: 100px solid $azul;
-    border-left: 2060px solid transparent;
-  }
 }
