--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
   box-sizing: border-box; }
 
 .container {
-  width: 55vw;
+  width: 75vw;
   margin: 0 auto; }
 
 .sobre {
@@ -61,13 +61,14 @@ body {
       color: #121a47; }
   .servicos .servicos__divcartoes {
     display: flex;
-    align-items: top;
-    justify-content: center; }
+    align-items: flex-start;
+    justify-content: space-around; }
   .servicos .servicos__cartao {
     font-size: 16px;
     color: #707070;
     width: 16vw;
-    margin: 30px; }
+    margin-top: 50px;
+    margin-bottom: 50px; }
     .servicos .servicos__cartao h4 {
       font-size: 24px; }
   .servicos .servicos__titulo__cartao {
@@ -83,8 +84,3 @@ body {
   .servicos .servicos__img {
     width: 74.8px;
     height: 74.8px; }
-  .servicos .servicos__curva {
-    width: 0;
-    height: 0;
-    border-bottom: 100px solid #121a47;
-    border-left: 2060px solid transparent; }
