--- a/assets/scss/arquivos/_servicos.scss
+++ b/assets/scss/arquivos/_servicos.scss
@@ -4,8 +4,8 @@
 
 .servicos {
   padding-top: 70px;
-
   background-color: $cinza-claro;
+
   .servicos__intro {
     margin: 0 auto;
     width: 35vw;
@@ -22,14 +22,11 @@
   }
 
   .servicos__divcartoes {
-    @include flex(flex-start, space-around);
-
+    @include flex(center, space-around);
   }
 
   .servicos__cartao {
     @include descricao;
-
-
   }
 
   .servicos__titulo__cartao {
@@ -51,5 +48,11 @@
     width: 74.8px;
     height: 74.8px;
   }
+}
 
+@media (max-width: 960px) {
+  .servicos__divcartoes {
+    @include flex(center, center);
+    flex-direction: column;
+  }
 }
