--- a/assets/scss/arquivos/_variaveis.scss
+++ b/assets/scss/arquivos/_variaveis.scss
@@ -2,7 +2,7 @@
 $branco: #ffffff;
 $azul: #121A47;
 $vermelho: #C90328;
-$cinza: #707070;
+$cinza: rgb(112, 112, 112);
 
 $cor-primaria: $branco;
 $cor-secundaria: $azul;
