--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,33 @@ body {
   width: 75vw;
   margin: 0 auto; }
 
+.banner {
+  background-image: url("../img/banner.jpeg");
+  height: 500px;
+  background-size: cover;
+  width: 100%;
+  background-position: center; }
+  .banner .titulo {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
+    width: 35vw;
+    margin: 0 auto; }
+  .banner .subtitulo {
+    text-align: center;
+    font-size: 32px;
+    color: #ffffff;
+    margin: 0 auto;
+    width: 80vw; }
+  .banner .btn {
+    background-color: #ffffff;
+    border-radius: 1px;
+    border: none;
+    font-size: 16px;
+    color: #121a47;
+    font-weight: bold; }
+
 .sobre {
   display: flex;
   align-items: center;
@@ -84,3 +111,81 @@ body {
   .servicos .servicos__img {
     width: 74.8px;
     height: 74.8px; }
+  .servicos .servicos__curva {
+    clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%);
+    width: 100%;
+    height: 100px;
+    background: #121a47;
+    position: relative;
+    bottom: -1px;
+    margin-top: 40px; }
+
+.orcamento {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  background: #121a47;
+  color: #ffffff; }
+  .orcamento .titulo {
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase; }
+  .orcamento .subtitulo_size {
+    width: 40vh; }
+  .orcamento .subtitulo {
+    font-size: 32px;
+    font-weight: bold; }
+  .orcamento .desc_size {
+    width: 48vh; }
+  .orcamento .titulo_desc {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 1px; }
+  .orcamento .titulo__contato {
+    padding-bottom: 15px; }
+  .orcamento .contato {
+    margin-right: 25vh; }
+  .orcamento .form {
+    display: flex;
+    flex-direction: column;
+    padding: 21px; }
+  .orcamento .item_form {
+    padding: 2px;
+    margin: 8px;
+    border-radius: 3px;
+    border: none;
+    height: 5vh; }
+  .orcamento .item_form-area {
+    padding: 2px;
+    margin: 8px;
+    border-radius: 3px;
+    border: none;
+    font-family: 'Open sans', sans-serif; }
+  .orcamento .botao {
+    width: 17vh;
+    margin-left: 19vh;
+    border: solid 1px;
+    border-radius: 4px;
+    height: 4.81vh;
+    text-align: center;
+    background-color: #ffffff;
+    font-weight: bold;
+    margin-top: 3%; }
+
+.rodape {
+  text-align: center;
+  position: relative; }
+  .rodape .logo_img {
+    width: 124px;
+    height: 124px;
+    display: inline-block;
+    position: absolute;
+    left: 10.4vw;
+    bottom: 11px; }
+  .rodape p {
+    display: inline-block; }
+  .rodape .vlt__topo {
+    width: 6vh;
+    position: absolute;
+    right: 6px;
+    bottom: 34px; }
