--- a/assets/style.css
+++ b/assets/style.css
@@ -35,11 +35,12 @@ body {
   background-position: center; }
   .banner .titulo {
     text-align: center;
-    font-size: 24px;
+    font-size: 25px;
     font-weight: bold;
     color: #ffffff;
-    width: 35vw;
-    margin-top: 0; }
+    width: 59vw;
+    margin: 0 auto;
+    padding-top: 70px; }
   .banner .subtitulo {
     text-align: center;
     font-size: 32px;
@@ -47,12 +48,15 @@ body {
     margin: 0 auto;
     width: 80vw; }
   .banner .btn {
+    width: 17vh;
+    border: solid 1px;
+    border-radius: 4px;
+    height: 4.81vh;
+    text-align: center;
     background-color: #ffffff;
-    border-radius: 1px;
-    border: none;
-    font-size: 16px;
-    color: #121a47;
-    font-weight: bold; }
+    font-weight: bold;
+    margin-top: 3%;
+    margin: 0 auto; }
 
 .sobre {
   display: flex;
