--- a/assets/scss/arquivos/_variaveis.scss
+++ b/assets/scss/arquivos/_variaveis.scss
@@ -22,3 +22,10 @@ $largura-mobile:960;
 $border: solid 1px;
 $altura: 4.81vh;
 $border-radius: 4px;
+
+
+// responsivo 960px
+$font-size-titulo-resp: 30px;
+$font-size-subtitulo-resp: 26px;
+$font-size-descricao-resp: 14px;
+$font-size-texto-resp: 12px;
