--- a/assets/scss/arquivos/_servicos.scss
+++ b/assets/scss/arquivos/_servicos.scss
@@ -3,18 +3,26 @@
 // }
 
 .servicos {
-  padding-top: 70px;
+
+  .servicos__paragrafo {
+    color: #707070;
+
+  }
+
+  padding-top: 60px;
   background-color: $cinza-claro;
 
   .servicos__intro {
     margin: 0 auto;
-    width: 35vw;
+    width: 60vw;
     text-align: center;
+
     h5 {
       font-size: $font-size-texto;
       color: $cor-titulo-vermelho;
       text-transform: uppercase;
     }
+
     h2 {
       font-size: $font-size-subtitulo;
       color: $cor-secundaria;
@@ -22,7 +30,7 @@
   }
 
   .servicos__divcartoes {
-    @include flex(center, space-around);
+    @include flex(flex-start, space-around);
   }
 
   .servicos__cartao {
@@ -37,7 +45,8 @@
   .servicos__suporte {
     margin: 0 auto;
     text-align: center;
-    width: 35vw;
+    width: 60vw;
+
     h2 {
       color: $cor-titulo-vermelho;
       font-size: $font-size-subtitulo;
@@ -50,19 +59,50 @@
   }
 }
 
+.servicos__curva {
+  clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%);
+  width: 100%;
+  height: 100px;
+  background: #121a47;
+  position: relative;
+  bottom: -1px;
+  margin-top: 40px;
+}
+
 @media (max-width: 960px) {
-  .servicos__divcartoes {
-    @include flex(center, center);
-    flex-direction: column;
-  }
-  .servicos__curva {
-    clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%);
-    width: 100%;
-    height: 100px;
-    background: #121a47;
-    position: relative;
-    bottom: -1px;
-    margin-top: 40px;
+  .servicos {
+    .servicos__divcartoes {
+      @include flex(center, center);
+      flex-direction: column;
+    }
+
+    .servicos__cartao {
+      text-align: center;
+      width: 80vw;
+    }
+  
+
+  .servicos__intro {
+    margin: 0 auto;
+    width: 80vw;
+    text-align: center;
+
+    h5 {
+      font-size: $font-size-texto-resp;
+      color: $cor-titulo-vermelho;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      font-size: $font-size-subtitulo-resp;
+      color: $cor-secundaria;
+    }
   }
 
+  .servicos__suporte {
+    margin: 0 auto;
+    text-align: center;
+    width: 85vw;
+  }
+}
 }
