Atualização rodapé e orçamento

--- a/assets/scss/arquivos/_rodape.scss
+++ b/assets/scss/arquivos/_rodape.scss
@@ -1,21 +1,40 @@
 .rodape {
     text-align: center;
     position: relative;
+
     .logo_img {
         width: 124px;
-        height: 124px; 
-        display:inline-block;
+        height: 124px;
+        display: inline-block;
         position: absolute;
         left: 10.4vw;
-        bottom: 11px;
+        bottom: 2vh;
     }
-    p{
+
+    p {
         display: inline-block;
     }
+
     .vlt__topo {
         width: 6vh;
         position: absolute;
-        right:6px; 
-        bottom: 34px;
+        right: 2vh;
+        bottom: 5vh;
     }
+}
+
+@media (max-width: 960px) {
+    .rodape {
+
+        .logo_img {
+            display: none;
+            position: unset;
+        }
+        .vlt__topo{
+        width: 9vh;
+        right: -4vh;
+        bottom: 6vh;
+        }
+    }
+
 }
