--- a/assets/scss/arquivos/_banner.scss
+++ b/assets/scss/arquivos/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
     background-image: url("../img/banner.jpeg");
-    height: 500px;
+    height: 530px;
     background-size: cover;
     width: 100%;
     background-position: center;
@@ -26,15 +26,58 @@
         width: 80vw;
     }
 
-    .btn {
-        width: 17vh;
-        border: $border;
-        border-radius: $border-radius;
-        height: $altura;
+   
+
+    .botao{
         text-align: center;
-        background-color: $branco;
-        font-weight: bold;
-        margin-top: 3%;
-        margin: 0 auto;
+        margin-top: 25px;
+        
+        .btn {
+            width: 17vh;
+            border: $border;
+            border-radius: $border-radius;
+            height: $altura;
+            text-align: center;
+            background-color: $branco;
+            font-weight: bold;
+            // margin-top: 3%;
+            margin: 0 auto;
+            padding: 10px 50px;
+            text-decoration: none;
+            border:none;
+            font-size:12px;
+        }
     }
-}
+
+
+    @media (max-width: 960px){
+        .titulo{
+            width: 60vw;
+            font-size: 15px;
+        }
+    }
+        
+        .subtitulo{
+            width: 60vw;
+            font-size: 15px;
+    
+        }
+
+   
+        .btn{
+            padding: 8px 10px;
+            font-size:10px;
+
+        }
+    }
+    
+
+
+// @media (max-width: 960px){
+//     .titulo{
+//         width: 30vw;
+//         font-size: 15px;
+
+//     }
+
+// 
