--- a/assets/scss/arquivos/_sobre.scss
+++ b/assets/scss/arquivos/_sobre.scss
@@ -1,7 +1,7 @@
 .sobre {
     @include flex(center,space-around);
-
     padding-bottom: 70px;
+
 
     .titulo {
         color: $cor-titulo-vermelho;
@@ -26,8 +26,8 @@
 
     .input{
         width: 100%;
-        height: 4.81vh;
-        margin: 5px;
+        height: $altura;
+        margin: 5px 0;
         border-radius: 4px;
         border: solid 1px $cor-texto;
     }
@@ -44,9 +44,28 @@
         color: $cor-primaria;
     }
 
+}
     
 
+@media (max-width: 960px){
+    .sobre{
+    flex-direction: column;
+
+    .img{
+        width: 90vw;
+        margin-top: -15px;
+        margin-left: 14px;
+    }
+
+    .btn{
+        width: 100%;
+        margin-left: 0;
+    }
+   }
 }
+    
+
+
 
 
 
