--- a/assets/scss/arquivos/_base.scss
+++ b/assets/scss/arquivos/_base.scss
@@ -1,4 +1,4 @@
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     padding: 0;
     margin: 0;
@@ -8,6 +8,6 @@ body{
 .container {
     width: 75vw;
     margin: 0 auto;
-    
-}
+    max-width: 1300px;
 
+}
