alteração do botao de sbir

--- a/assets/scss/arquivos/_rodape.scss
+++ b/assets/scss/arquivos/_rodape.scss
@@ -32,9 +32,9 @@
         }
 
         .vlt__topo {
-            width: 9vh;
+            width: 30px;
             right: -4vh;
-            bottom: 6vh;
+            bottom: 8vh;
         }
     }
 
