--- a/assets/scss/arquivos/_sobre.scss
+++ b/assets/scss/arquivos/_sobre.scss
@@ -61,6 +61,10 @@
 
         }
 
+        .subtitulo {
+            font-size: 26px;
+        }
+
         .btn {
             width: 100%;
             margin-left: 0;
